--- a/buddy.yml
+++ b/buddy.yml
@@ -1365,7 +1365,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: 'Docker / Alpine / PHP 8.2 / MariaDB / Robot / Dynamic Store OFF'
+- pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / Dynamic Store OFF'
   events:
       - type: 'PUSH'
         refs:
@@ -1392,7 +1392,7 @@
             - '.ci/snippet/REQUIRE composer install --optimize-autoloader --no-interaction --prefer-install=auto '
             - '.ci/snippet/FINISH'
         shell: 'BASH'
-      - action: 'Docker / Alpine / PHP 8.2 / MariaDB / Robot'
+      - action: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot'
         type: 'NATIVE_BUILD_DOCKER_CLI'
         commands:
             - '.ci/snippet/PREPARE'
@@ -1473,7 +1473,7 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-on/robot-api/$BUDDY_EXECUTION_HASH/PHP8.2PostgreSQL/log.html'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-on/robot-api/$BUDDY_EXECUTION_HASH/PHP8.3PostgreSQL/log.html'
             - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit/dms-on/robot-api/${BUDDY_EXECUTION_HASH}/PHP8.2PostgreSQL/log.html"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
             - '.ci/snippet/FINISH'
@@ -1524,7 +1524,7 @@
             - '.ci/snippet/REQUIRE composer install --optimize-autoloader --no-interaction --prefer-install=auto '
             - '.ci/snippet/FINISH'
         shell: 'BASH'
-      - action: 'Docker / Alpine / PHP 8.2 / MariaDB / Robot'
+      - action: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot'
         type: 'NATIVE_BUILD_DOCKER_CLI'
         commands:
             - '.ci/snippet/PREPARE'
@@ -1701,7 +1701,7 @@
               direction: 'PIPELINE_TO_VM'
         docker_layer_caching_scope: 'ACTION'
 
-- pipeline: 'Positive / Docker / Alpine / PHP 8.2 / MariaDB / Robot / API'
+- pipeline: 'Positive / Docker / Alpine / PHP 8.3 / MariaDB / Robot / API'
   events:
       - type: 'PUSH'
         refs:
@@ -1728,7 +1728,7 @@
             - '.ci/snippet/REQUIRE composer install --optimize-autoloader --no-interaction --prefer-install=auto '
             - '.ci/snippet/FINISH'
         shell: 'BASH'
-      - action: 'Docker / Alpine / PHP 8.2 / MariaDB / Robot'
+      - action: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot'
         type: 'NATIVE_BUILD_DOCKER_CLI'
         commands:
             - '.ci/snippet/PREPARE'
@@ -1771,7 +1771,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: 'Negative / Docker / Alpine / PHP 8.2 / MariaDB / Robot / API'
+- pipeline: 'Negative / Docker / Alpine / PHP 8.3 / MariaDB / Robot / API'
   events:
       - type: 'PUSH'
         refs:
@@ -1798,7 +1798,7 @@
             - '.ci/snippet/REQUIRE composer install --optimize-autoloader --no-interaction --prefer-install=auto '
             - '.ci/snippet/FINISH'
         shell: 'BASH'
-      - action: 'Docker / Alpine / PHP 8.2 / MariaDB / Robot'
+      - action: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot'
         type: 'NATIVE_BUILD_DOCKER_CLI'
         commands:
             - '.ci/snippet/PREPARE'
@@ -1892,7 +1892,7 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE ls -al ./.robot/results'
+            - '.ci/snippet/REQUIRE ls -la ./.robot'
             - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-on/robot-ui/$BUDDY_EXECUTION_HASH/PHP8.3MariaDB/log.html'
             - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit/dms-on/robot-ui/${BUDDY_EXECUTION_HASH}/PHP8.3MariaDB/log.html"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
@@ -2124,7 +2124,7 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/robot-ui/$BUDDY_EXECUTION_HASH/PHP8.2PostgreSQL/log.html'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/robot-ui/$BUDDY_EXECUTION_HASH/PHP8.3PostgreSQL/log.html'
             - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit/dms-off/robot-ui/${BUDDY_EXECUTION_HASH}/PHP8.2PostgreSQL/log.html"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
             - '.ci/snippet/FINISH'
@@ -2195,7 +2195,7 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/robot-ui/$BUDDY_EXECUTION_HASH/PHP8.2PostgreSQL/log.html'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/robot-ui/$BUDDY_EXECUTION_HASH/PHP8.3PostgreSQL/log.html'
             - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit/dms-off/robot-ui/${BUDDY_EXECUTION_HASH}/PHP8.2PostgreSQL/log.html"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
             - '.ci/snippet/FINISH'
@@ -2266,7 +2266,7 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/robot-ui/$BUDDY_EXECUTION_HASH/PHP8.2PostgreSQL/log.html'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/robot-ui/$BUDDY_EXECUTION_HASH/PHP8.3PostgreSQL/log.html'
             - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit/dms-off/robot-ui/${BUDDY_EXECUTION_HASH}/PHP8.2PostgreSQL/log.html"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
             - '.ci/snippet/FINISH'
