--- a/buddy.yml
+++ b/buddy.yml
@@ -1400,7 +1400,7 @@
             - '.ci/snippet/RUN docker/sdk up -t'
             - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v docker:True --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite ."'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v yves_env:http://yves.eur.spryker.local -v docker:True --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite ."'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -1464,7 +1464,7 @@
             - '.ci/snippet/RUN docker/sdk up -t'
             - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v db_engine:psycopg2 -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite ."'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v db_engine:psycopg2 -v docker:True -v dms:true -v glue_env:http://glue.eur.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eur.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite ."'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -1612,7 +1612,7 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE aws s3 cp ./.cypress s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/cypress/$BUDDY_EXECUTION_HASH/PHP8.3MariaDB/'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.cypress s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-off/cypress/$BUDDY_EXECUTION_HASH/PHP8.3MariaDB/ --recursive'
             - 'echo "Check the Cypress screenshots - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-central-1&prefix=suite-nonsplit/dms-off/cypress/${BUDDY_EXECUTION_HASH}/PHP8.3MariaDB//screenshots/&showversions=false"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
             - '.ci/snippet/FINISH'
@@ -1676,7 +1676,7 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE aws s3 cp ./.cypress s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-on/cypress/$BUDDY_EXECUTION_HASH/PHP8.3MariaDB/'
+            - '.ci/snippet/REQUIRE aws s3 cp ./.cypress s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-on/cypress/$BUDDY_EXECUTION_HASH/PHP8.3MariaDB/ --recursive'
             - 'echo "Check the Cypress screenshots - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-central-1&prefix=suite-nonsplit/dms-on/cypress/${BUDDY_EXECUTION_HASH}/PHP8.3MariaDB/screenshots/&showversions=false"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
             - '.ci/snippet/FINISH'
